# recomind

./: .gitignore  README.md
BookRecommendationSystem/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
BookRecommendationSystem/notebooks/: SentimentAnalysis.ipynb  text_classification.ipynb
